2003-04-29  Martin Blom  <martin@blom.org>

	* When building the developer's archives, only relevant header
	files are included now. For example, only the m68k archive
	contains header files for SAS/C, Storm and assemblers.

2003-04-25  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.36.

	* ahi.device: The dynamic volume code now assumes that each
	application will play at least one sound. (It's just a test.)

	* The m68k version is now compiled for 060 per default, but will
	still run on 020+ of course.

2003-04-24  Martin Blom  <martin@blom.org>

	* Released filesave.audio version 5.1.

	* Released ahi.device 5.35.

	* Released void.audio 5.4.

	* Added a new example: PlaySineEverywhere.

	* CloneAudioModes: Removed warnings when BPTR is a pointer.

	* ahi.device: The workaround for the m68k compiler bug introduced
	in ahi.device 5.25 assumed a big endian CPU. Now, the workaround
	is only applied when compiling for the m68k.

	* filesave.audio: Now endian aware. Avoided varargs in order to
	make it compile for AROS.

	* filesave.audio: Can now be compiled using gcc.

2003-04-23  Martin Blom  <martin@blom.org>

	* Released void.audio 5.3.

	* void.audio: Moved generic code parts to Drivers/Common, which
	can now be used by other drivers too.

2003-04-22  Martin Blom  <martin@blom.org>

	* Released void.audio 5.2.

	* Released AHI-Handler 5.2.

	* Released ahi.device 5.34.

	* Released AddAudioModes 5.4.

	* Released AHI preferences 5.9.

	* The endian update from 2003-04-17 broke all big endian
	targets. Fixed.

	* void.audio: This example driver can now be compiled using gcc
	and builds for all targets (m68k-amigaos, ppc-morphos,
	i?86be-amithlon and i386-aros).

2003-04-18  Martin Blom  <martin@blom.org>

	* AHI: If no mode is available, the "Play a test sound" button is
	disabled.

2003-04-17  Martin Blom  <martin@blom.org>

	* Ported AHI to AROS.

	* The device and preference program are now endian aware when
	reading IFF files.
